# learning

./: .gitignore  Dockerfile  README.md  capacitor.config.json  ionic.config.json  package-lock.json  package.json  server-localhost.js  server.js  server_notes.txt
learning_host_production/: .dockerignore  Dockerfile  package-lock.json  package.json
public/: What pieces can I capture?  index.html  load-stockfish.js  playerColor_black_stats.js  playerColor_white_stats.js  sample2000.pgn  sample2100.pgn  sample2200+(1).pgn  sample2200+.pgn  tensorflow-worker.js
public/chess_to_feature_vector/: main.js
public/games/: HumanGames2200+.pgn
public/rust/: eval_wasm_backup.js
public/rust/eval-wasm/: Cargo.toml
public/rust/eval-wasm/src/: expansion_factor.rs  lib.rs  mobility.rs  move_info.rs  package_density.rs
public/rust/eval-wasm/src/history/: history_move.rs
public/tensorflow/: tf-backend-wasm.js
public/tensorflow-worker/: main.js
src/: App.tsx  index.tsx
src/components/: AboutContainer.tsx  AppContainer.tsx  CardContent.tsx  ChessMetaContent.tsx  ExploreContainer.css  FaqContainer.tsx  ModalChessMetaContent.tsx  PlanContainer.tsx  PolicyContainer.tsx  SignupContainer.tsx  comments.txt
src/js/: chess-board-utils.js  chess-engine.js  chess-meta.js  chess-model.js  chess-stats.js  chess-to-feature-vector-controller.js  chess-trainer.js  default_model.js  importance-chess.js  lichess-api.js  tensorflow-chess.js  utilities.js
src/pages/: About.tsx  Faq.tsx  Login.css  Login.tsx  Policy.tsx  Signup.tsx  Tab1.css  Tab1.tsx  Tab2.tsx
(+38 files in other folders)
