[package]
name = "eval-wasm"
authors = ["Philipp Schlütermann <philipp.schluetermann@udo.edu>"]
description = "Generating features from chess positions"
repository = "https://github.com/Philipp-Sc/learning"
version = "0.1.0"
edition = "2018"
 
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chess = "3.2.0" 

[dependencies.web-sys]
version = "0.3"
features = [ "console" ] 